--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -1,31 +1,32 @@
-
-
-.leftbar_header {
+.drawer {
     background: #27274b;
-    .logo_image {
-        width: 78%;
+    .leftbar_header {
+        background: #27274b;
+        .logo_image {
+            width: 78%;
+            height: 100%;
+        }
+        .button_open {
+            color: white;
+            margin-right: 0.6em;
+        }
+        .button_close {
+            color: white;
+            margin-left: 0.2em;
+        }
+    }
+    .nav_leftbar {
+        background-color: #27274b;
+        color: white;
         height: 100%;
-    }
-    .button_open{
-        color: white;
-        margin-right: 0.6em;
-    }
-    .button_close{
-        color: white;
-        margin-left: 0.2em;
-
-    }
-}
-.nav_leftbar{
-    background-color: #27274B;
-    color: white;
-    .nav_leftbar_item{
-        border-bottom: 1px rgba(255, 255, 255, 0.302) solid;
-        .nav_item_icon{
-            color: white
+        .nav_leftbar_item {
+            border-bottom: 1px rgba(255, 255, 255, 0.302) solid;
+            .nav_item_icon {
+                color: white;
+            }
         }
     }
 }
-.box_content{
-    width: 100%;
+.box_content {
+    width: 100% !important;
 }
