--- a/frontend/src/pages/Supply/supply.scss
+++ b/frontend/src/pages/Supply/supply.scss
@@ -1,36 +1,88 @@
-.supply_page{
+.supply_page {
     height: 100vh;
     background: rgb(228, 228, 228);
     padding: 2em 1em 0 1em;
-    .supply_content{
+    .supply_content {
         background: rgb(255, 255, 255);
         height: 90vh;
-        .navig{
+        padding: 0 1em;
+        .navig {
             padding-top: 0.5em;
             color: rgb(70, 70, 70);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
             font-size: 0.8em;
-            i{
-                margin: 0 1em
+            i {
+                margin: 0 1em;
             }
         }
-        .activity{
+        .activity {
             padding: 0.5em 1em;
             display: flex;
             justify-content: space-between;
-            .left_activity{
+            align-items: center;
+            .left_activity {
                 display: flex;
-                .left_activity_item{
+                .left_activity_item {
                     margin-left: 2em;
                     color: gray;
-                    i{
+                    i {
                         margin-right: 0.7em;
                     }
-                    a{
+                    a {
                         text-decoration: none;
                     }
                 }
             }
+            .right_activity {
+                span {
+                    text-transform: capitalize;
+                }
+                i {
+                    margin-right: 1em;
+                    font-size: 2em;
+                }
+            }
+        }
+
+        .find_section {
+            padding-top: 1em;
+            align-items: center;
+            display: flex;
+            justify-content: space-around;
+            i {
+                color: gray;
+                margin-right: 1em;
+            }
+            .search_section {
+                width: 60%;
+                align-items: center;
+                padding: 0.5em 1em;
+                display: flex;
+                border-radius: 0.5em;
+                border: 1px rgb(167, 167, 167) solid;
+                .search_input {
+                    outline: none;
+                    border: none;
+                    &:focus {
+                        outline-style: none;
+                    }
+                }
+            }
+            .filter_section{
+                margin-top: -1em;
+                display: flex;
+                align-items: center;
+                i{
+                    margin-right: 0.5em;
+                    font-size: 2em;
+                }
+                .filter_input{
+                    min-width: 10em;
+                }
+            }
+        }
+        .table{
+            padding-top: 1em;
         }
     }
 }
