--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -16,6 +16,10 @@
 
     }
 }
+.nav_link {
+    text-decoration: none;
+    color: white;
+}
 .nav_leftbar{
     background-color: #27274B;
     color: white;
