--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -15,6 +15,11 @@
             margin-left: 0.2em;
         }
     }
+    .nav_link {
+        text-decoration: none;
+        color: white;
+    }
+
     .nav_leftbar {
         background-color: #27274b;
         color: white;
