--- a/frontend/src/pages/SupplyOrder/NewOrder/SupplyOrder.scss
+++ b/frontend/src/pages/SupplyOrder/NewOrder/SupplyOrder.scss
@@ -12,6 +12,10 @@
 .back {
     display: flex;
     margin-top: 22px;
+    cursor: pointer;
+    :hover {
+        color: #007BFF;
+    }
     
 }
 
