--- a/frontend/src/pages/SupplyOrder/NewOrder/productSelect/ProductSelect.scss
+++ b/frontend/src/pages/SupplyOrder/NewOrder/productSelect/ProductSelect.scss
@@ -13,6 +13,15 @@
     .selectproduct {
         display: flex;
         margin-bottom: 15px;
+        
+        .info-prod {
+            justify-content: space-between;
+            width: 100%;
+        }
+        .info {
+            width: 100%;
+            margin-left: 16px;
+       }
         .selectProduct-info{
             display: flex;
             flex-direction: row;
@@ -32,6 +41,10 @@
                 height: 40px;
                 border-radius: 5px;
                 z-index: 1; 
+                .MuiAutocomplete-option {
+                    width: 100%;
+                }
+                
             }
 
         }
