--- a/frontend/src/pages/SupplyOrder/NewOrder/SupplyOrder.scss
+++ b/frontend/src/pages/SupplyOrder/NewOrder/SupplyOrder.scss
@@ -35,7 +35,7 @@
         margin-top: 15px;
         margin-bottom: 20px;
     }
-    .more-info-detail{
+    .more-info-detail-created{
         background-color: #FFFFFF;
         border: 1px solid rgb(224, 224, 224);
         border-radius: 5px;
@@ -54,7 +54,7 @@
             padding-left: 20px;
             height: 120px;
             .title{
-                font-size: 12px;
+                // font-size: 12px;
                 font-weight: 400;
                 padding-left: 0px;
                 // margin: 15px 15px;
@@ -69,7 +69,7 @@
         }
         .time-supply-order{
             .title{
-                font-size: 12px;
+                // font-size: 12px;
                 font-weight: 400;
                 padding-left: 20px;
                 margin-bottom: 10px;
@@ -113,4 +113,8 @@
             font-size: 16px;
         }
     }
+}
+
+.link-detail {
+    text-decoration: none;
 }
