--- a/frontend/src/pages/Login_Register/login.scss
+++ b/frontend/src/pages/Login_Register/login.scss
@@ -1,12 +1,8 @@
-body {
-    font-family: "Poppins", sans-serif;
-    overflow: hidden;
-}
-
 .login {
     position: relative;
 
     .background {
+        height: 100vh;
         background: linear-gradient(to bottom, #006fb5, rgba(255, 255, 255, 0));
         position: absolute;
         img {
@@ -60,11 +56,11 @@ body {
                 font-weight: 600;
                 cursor: pointer;
 
-                &:hover{
+                &:hover {
                     background-color: #505db6;
                 }
             }
-            .toRegister{
+            .toRegister {
                 text-align: center;
             }
         }
@@ -77,6 +73,18 @@ body {
 
 form {
     width: 100%;
+    a {
+        display: block;
+        text-align: right;
+        text-decoration: none;
+        color: #999;
+        font-size: 0.9rem;
+        transition: 0.3s;
+
+        &:hover {
+            color: #38d39f;
+        }
+    }
 }
 
 .login-content img {
@@ -84,7 +92,7 @@ form {
 }
 
 .login-content h2 {
-    margin:0 0 2em 0;
+    margin: 0 0 2em 0;
     color: #505050;
     text-transform: uppercase;
     font-size: 3em;
@@ -169,19 +177,6 @@ form {
 
 .input-div.pass {
     margin-bottom: 4px;
-}
-
-a {
-    display: block;
-    text-align: right;
-    text-decoration: none;
-    color: #999;
-    font-size: 0.9rem;
-    transition: 0.3s;
-}
-
-a:hover {
-    color: #38d39f;
 }
 
 @media screen and (max-width: 1050px) {
