update logout, nãy quên mất :v

--- a/frontend/src/pages/Suppliers/createSupplier.scss
+++ b/frontend/src/pages/Suppliers/createSupplier.scss
@@ -85,3 +85,13 @@
         }
     }
 }
+.navig {
+    // padding-top: 0.5em;
+    // color: rgb(70, 70, 70);
+    // font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    // font-size: 0.8em;
+    a {
+        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+        text-decoration: none;
+    }
+}
