--- a/frontend/src/pages/Suppliers/createSupplier.scss
+++ b/frontend/src/pages/Suppliers/createSupplier.scss
@@ -23,18 +23,22 @@
         .activity {
             padding: 0.5em 1em;
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            width: 48%;
+            width: 100%;
             margin-left: auto;
+            justify-content: flex-end;
 
             .button_activity {
-                font-size: 0.75em;
+                font-size: 0.7em;
+                margin: 0 1em;
+                font-weight: 400;
                 span {
                     text-transform: capitalize;
+                    font-style: 1.4em;
                 }
                 i {
                     margin-right: 1em;
+                    font-weight: 600;
                     font-size: 2em;
                 }
             }
