--- a/frontend/src/components/product/category/style.scss
+++ b/frontend/src/components/product/category/style.scss
@@ -20,17 +20,19 @@
         color: rgba(0, 0, 0, 0.54);
     }
     .iconOpen {
-        color: rgb(255, 255, 255);
+        color: rgb(24, 113, 205);
         right: 6px;
         transform: rotate(180deg);
     }
     .menuDiv {
         position: absolute;
+        top: 51px;
         left: 0;
         right: 0;
+        z-index: 1000;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, .2);
         background-color: #fff;
-        padding: 0 14px;
+        // padding: 0 14px;
     }
 }
 .open {
