--- a/frontend/src/pages/SupplyOrder/DetailOrder/DetailOrder.scss
+++ b/frontend/src/pages/SupplyOrder/DetailOrder/DetailOrder.scss
@@ -142,6 +142,35 @@
         }
     }
 }
+.import {
+    margin-top: 20px;
+    width: 100%;
+    .header-import {
+        display: flex;
+        justify-content: space-between;
+        .btn-import {
+            width: 30%;
+            text-align: center;
+        }
+    }
+    .history-import {
+        .body-history-import {
+            .css-ha3bif-MuiTimelineItem-root::before {
+                content: none;
+            }
+        }
+    }
+    .modal-import {
+        #modal-modal-description {
+            .header-Product {
+                display: flex;
+                width: 100%;
+                background-color: #9b9999;
+            }
+        }
+       
+    }
+}
 
 .detail-supplier {
     display: flex;
