--- a/frontend/src/pages/SupplyOrder/DetailOrder/DetailOrder.scss
+++ b/frontend/src/pages/SupplyOrder/DetailOrder/DetailOrder.scss
@@ -75,7 +75,7 @@
         .product-item {
             width: 100%;
             min-height: 50px;
-            border: 1px solid rgb(192, 192, 192);
+            border: 1px solid rgb(187, 187, 187);
            
             display: flex;
             justify-content: space-between;
@@ -165,7 +165,7 @@
             .header-Product {
                 display: flex;
                 width: 100%;
-                background-color: #9b9999;
+                // background-color: #9b9999;
             }
         }
        
