--- a/frontend/src/pages/Login_Register/login.scss
+++ b/frontend/src/pages/Login_Register/login.scss
@@ -1,4 +1,6 @@
-.login {
+.login_page {
+    overflow: hidden;
+    height: 100vh;
     position: relative;
 
     .background {
@@ -8,7 +10,6 @@
         img {
             height: 100vh;
             width: 100vw;
-            opacity: 0.9;
         }
     }
     .container {
@@ -17,6 +18,7 @@
 }
 
 .container {
+    font-family: Raleway, sans-serif;
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -28,192 +30,143 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.login-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70%;
-    text-align: center;
-    margin-right: 15em;
-
-    form {
-        .submit {
-            display: grid;
-            text-align: center;
-            justify-content: center;
-            align-items: center;
-            margin-top: 2em;
-
-            button {
-                padding: 1em 8em;
-                border-radius: 2em;
-                background: #727bb5;
-                margin: 0.5em 0;
-                border: 1px #aaaaaa solid;
-                color: #ffffff;
-                font-weight: 600;
-                cursor: pointer;
-
-                &:hover {
-                    background-color: #505db6;
-                }
-            }
-            .toRegister {
-                text-align: center;
-            }
-        }
+    img {
+        height: 12em;
     }
 }
 
-.img img {
-    width: 60%;
-}
-
-form {
-    width: 100%;
-    a {
-        display: block;
-        text-align: right;
-        text-decoration: none;
-        color: #999;
-        font-size: 0.9rem;
-        transition: 0.3s;
-
-        &:hover {
-            color: #38d39f;
-        }
-    }
-}
-
-.login-content img {
-    height: 100px;
-}
-
-.login-content h2 {
-    margin: 0 0 2em 0;
-    color: #505050;
-    text-transform: uppercase;
-    font-size: 3em;
-}
-
-.login-content .input-div {
+.screen {
+    margin-left: 5em;
+    background: linear-gradient(to bottom, #6fc1db, #1e95ab);
     position: relative;
-    display: grid;
-    grid-template-columns: 7% 93%;
-    margin: 25px 0;
-    padding: 5px 0;
-    border-bottom: 2px solid #9e9e9e;
+    height: 40em;
+    width: 32em;
+    box-shadow: 0px 0px 24px #33333a;
 }
 
-.login-content .input-div.one {
-    margin-top: 0;
-}
-
-.i {
-    color: #9d9d9d;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.i i {
-    transition: 0.3s;
-}
-
-.input-div > div {
+.screen__content {
+    z-index: 1;
     position: relative;
-    height: 45px;
-}
-
-.input-div:before,
-.input-div:after {
-    content: "";
-    position: absolute;
-    bottom: -2px;
-    width: 0%;
-    height: 2px;
-    background-color: #38d39f;
-    transition: 0.4s;
-}
-
-.input-div:before {
-    right: 50%;
-}
-
-.input-div:after {
-    left: 50%;
-}
-
-.input-div.focus:before,
-.input-div.focus:after {
-    width: 50%;
-}
-
-.input-div.focus > div > h5 {
-    top: -5px;
-    font-size: 15px;
-}
-
-.input-div.focus > .i > i {
-    color: #38d39f;
-}
-
-.input-div > div > input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
     height: 100%;
+}
+
+.screen__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    -webkit-clip-path: inset(0 0 0 0);
+    clip-path: inset(0 0 0 0);
+}
+
+.screen__background__shape {
+    transform: rotate(45deg);
+    position: absolute;
+}
+
+.screen__background__shape1 {
+    height: 520px;
+    width: 520px;
+    background: #fff;
+    top: -50px;
+    right: 120px;
+    border-radius: 0 72px 0 0;
+}
+
+.screen__background__shape2 {
+    height: 220px;
+    width: 220px;
+    background: #81e2ff;
+    top: -172px;
+    right: 0;
+    border-radius: 32px;
+}
+
+.screen__background__shape3 {
+    height: 540px;
+    width: 190px;
+    background: linear-gradient(270deg, #57c7c9, #68bdd5);
+    top: -24px;
+    right: 0;
+    border-radius: 32px;
+}
+
+.screen__background__shape4 {
+    height: 400px;
+    width: 200px;
+    background: #3784a1;
+    top: 420px;
+    right: 50px;
+    border-radius: 60px;
+}
+
+.login {
+    width: 320px;
+    padding: 30px;
+    padding-top: 156px;
+    a {
+        text-decoration: none;
+    }
+}
+
+.login__field {
+    padding: 20px 0px;
+    position: relative;
+}
+
+.login__icon {
+    position: absolute;
+    top: 30px;
+    color: #7875b5;
+}
+
+.login__input {
     border: none;
-    outline: none;
+    border-bottom: 2px solid #d1d1d4;
     background: none;
-    padding: 0.5rem 0.7rem;
-    font-size: 1.2rem;
-    color: #555;
-    font-family: "poppins", sans-serif;
+    padding: 10px;
+    padding-left: 24px;
+    font-weight: 700;
+    width: 75%;
+    transition: 0.2s;
 }
 
-.input-div.pass {
-    margin-bottom: 4px;
+.login__input:active,
+.login__input:focus,
+.login__input:hover {
+    outline: none;
+    border-bottom-color: #6a679e;
 }
 
-@media screen and (max-width: 1050px) {
-    .container {
-        grid-gap: 5rem;
-    }
+.login__submit {
+    background: #fff;
+    font-size: 14px;
+    margin-top: 30px;
+    padding: 16px 20px;
+    border-radius: 26px;
+    border: 1px solid #d4d3e8;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    color: #4c489d;
+    box-shadow: 0px 2px 2px #5c5696;
+    cursor: pointer;
+    transition: 0.2s;
 }
 
-@media screen and (max-width: 1000px) {
-    form {
-        width: 290px;
-    }
-
-    .login-content h2 {
-        font-size: 2.4rem;
-        margin: 8px 0;
-    }
-
-    .img img {
-        width: 400px;
-    }
+.login__submit:active,
+.login__submit:focus,
+.login__submit:hover {
+    border-color: #6a679e;
+    outline: none;
 }
 
-@media screen and (max-width: 900px) {
-    .container {
-        grid-template-columns: 1fr;
-    }
-
-    .img {
-        display: none;
-    }
-
-    .wave {
-        display: none;
-    }
-
-    .login-content {
-        justify-content: center;
-    }
+.button__icon {
+    font-size: 24px;
+    margin-left: auto;
+    color: #7875b5;
 }
