--- a/frontend/src/pages/Suppliers/detailSupplier.scss
+++ b/frontend/src/pages/Suppliers/detailSupplier.scss
@@ -73,6 +73,9 @@
                         margin-left: 4em;
                         li {
                             padding: 1em 0;
+                            strong {
+                                margin-right: 2em;
+                            }
                         }
                     }
                 }
@@ -80,6 +83,11 @@
 
             .second_info {
                 margin-top: 3em;
+                .empty_content {
+                    color: #bfbfbf;
+                    font-size: 2em;
+                    text-align: center;
+                }
             }
         }
     }
@@ -114,7 +122,7 @@
             margin-top: 2em;
         }
     }
-    .activity{
+    .activity {
         margin: 1em 0;
     }
 }
