--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -1,11 +1,14 @@
 .drawer {
-    font-size: 16px!important;
+    font-size: 16px !important;
     background: #27274b;
     .leftbar_header {
         background: #27274b;
-        .logo_image {
-            width: 78%;
+        a {
             height: 100%;
+            .logo_image {
+                width: 100%;
+                height: 100%;
+            }
         }
         .button_open {
             color: white;
@@ -35,4 +38,5 @@
 }
 .box_content {
     width: 100% !important;
+    overflow: hidden;
 }
