--- a/frontend/src/pages/SupplyOrder/NewOrder/productSelect/ProductSelect.scss
+++ b/frontend/src/pages/SupplyOrder/NewOrder/productSelect/ProductSelect.scss
@@ -27,11 +27,12 @@
             flex-direction: row;
             margin-left: 20px;
             border: 1px rgb(209, 209, 209) solid;
-            border-bottom-left-radius: 5px;
-            border-top-left-radius: 5px;
-            // border-radius: 5px;
+            // border-bottom-left-radius: 5px;
+            // border-top-left-radius: 5px;
+            border-radius: 5px;
             align-items: center;
-            width: 80%;
+            width: 100%;
+            margin-right: 20px;
             // height: 30px;
             .icon-search{   
                 margin-left: 10px;
