--- a/frontend/src/pages/SupplyOrder/NewOrder/supplySelect/SupplySelect.scss
+++ b/frontend/src/pages/SupplyOrder/NewOrder/supplySelect/SupplySelect.scss
@@ -1,7 +1,7 @@
 .body {
     flex-direction: column ;
     background-color: #F4F6F8;
-    padding: 10px 20px;
+    padding: 0px 20px;
     // justify-content: space-between;
 }
 
@@ -22,9 +22,9 @@
     
     border: 1px solid #e4e4e4 ;
     border-radius: 5px;
-    padding: 10px 10px;
+    padding: 20px 10px;
     background-color: #FFFFFF;
-    margin-top: 40px;
+    // margin-top: 40px;
     .title {
         font-weight: 600;
         padding-bottom: 10px;
