--- a/frontend/src/pages/Suppliers/suppliers.scss
+++ b/frontend/src/pages/Suppliers/suppliers.scss
@@ -95,6 +95,7 @@
     // font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     // font-size: 0.8em;
     a {
+        color: black;
         font-family: "Roboto", "Helvetica", "Arial", sans-serif;
         text-decoration: none;
     }
