--- a/frontend/src/pages/Suppliers/createSupplier.scss
+++ b/frontend/src/pages/Suppliers/createSupplier.scss
@@ -1,7 +1,7 @@
 .createSupplier_page {
     height: 100%;
     background: #f4f6f8;
-    padding: 2em 1em 0 1em;
+    //padding: 2em 1em 0 1em;
     .createSupplier_content {
         background: #f4f6f8;
         height: 100%;
@@ -34,58 +34,57 @@
             }
         }
 
-        .createSupplier_form {
-            margin-top: 2em;
-            padding: 3em 2em;
-            display: flex;
-            background: #f4f6f8;
+//         .createSupplier_form {
+//             margin-top: 2em;
+//             display: flex;
+//             background: #f4f6f8;
 
-            .left_info {
-                flex: 8;
-                margin-right: 2em;
-                .left_info_first {
-                    border-radius: 1em;
-                    border: 1px rgb(177, 177, 177) solid;
-                    padding: 2em;
-                    background: white;
-                    .left_info_first_input {
-                        width: 45%;
-                        margin: 1em 0;
-                    }
-                    .left {
-                        float: right;
-                    }
-                    .address {
-                        width: 100%;
-                    }
-                }
-                .second {
-                    margin-top: 2em;
-                }
-            }
-            .right_info {
-                flex: 4;
-                .right_info_first {
-                    border-radius: 1em;
-                    border: 1px rgb(177, 177, 177) solid;
-                    padding: 2em;
-                    background: white;
-                    .right_info_first_input {
-                        width: 100%;
-                        margin-top: 2em;
-                    }
-                }
-            }
-        }
+//             .left_info {
+//                 flex: 8;
+//                 margin-right: 2em;
+//                 .left_info_first {
+//                     //border-radius: 1em;
+//                     //border: 1px rgb(177, 177, 177) solid;
+//                     padding: 2em;
+//                     background: white;
+//                     .left_info_first_input {
+//                         width: 45%;
+//                         margin: 1em 0;
+//                     }
+//                     .left {
+//                         float: right;
+//                     }
+//                     .address {
+//                         width: 100%;
+//                     }
+//                 }
+//                 .second {
+//                     margin-top: 2em;
+//                 }
+//             }
+//             .right_info {
+//                 flex: 4;
+//                 .right_info_first {
+//                     //border-radius: 1em;
+//                     //border: 1px rgb(177, 177, 177) solid;
+//                     padding: 2em;
+//                     background: white;
+//                     .right_info_first_input {
+//                         width: 100%;
+//                         margin-top: 2em;
+//                     }
+//                 }
+        //     }
+        // }
     }
 }
-.navig {
-    // padding-top: 0.5em;
-    // color: rgb(70, 70, 70);
-    // font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    // font-size: 0.8em;
-    a {
-        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-        text-decoration: none;
-    }
-}
+// .navig {
+//     // padding-top: 0.5em;
+//     // color: rgb(70, 70, 70);
+//     // font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+//     // font-size: 0.8em;
+//     a {
+//         font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+//         text-decoration: none;
+//     }
+// }
